# CodingEval

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
configs/: default.yaml  regression.yaml
configs/agents/: aider.yaml  claude_code.yaml
configs/datasets/: swebench.yaml
docker/base/: Dockerfile
examples/custom_eval/: custom_cases.yaml
src/codingeval/agents/: __init__.py  aider.py  claude_code.py  registry.py  subprocess_agent.py
src/codingeval/cli/: list_cmd.py  main.py  report.py  run.py
src/codingeval/core/: agent.py  config.py  dataset.py  evaluator.py  models.py  reporter.py  runner.py
src/codingeval/datasets/: __init__.py  custom.py  registry.py  swebench.py
src/codingeval/docker/: host_workspace.py  manager.py  workspace.py
src/codingeval/evaluators/: __init__.py  registry.py  swebench.py
src/codingeval/regression/: __init__.py  cases.yaml  dataset.py  evaluator.py  repo_builder.py
src/codingeval/regression/repos/: add-error-handling.bundle  add-new-method.bundle  debug-stack-trace.bundle  fix-off-by-one.bundle  fix-single-function.bundle  fix-test-regression.bundle  fix-yaml-config.bundle  multi-file-import.bundle  refactor-extract.bundle  search-and-replace.bundle
src/codingeval/reporters/: __init__.py  console.py  json_reporter.py  registry.py
src/codingeval/utils/: git.py  logging.py  patch.py
tests/integration/: test_pipeline.py
tests/unit/: test_agents.py  test_config.py  test_custom_dataset.py  test_models.py  test_registries.py  test_regression_dataset.py  test_reporters.py  test_utils.py
